--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-11  Gert Driesen  <gert.driesen@telenet.be>
+	    Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile (PROGRAM): Make profile-specific.
+	(PROGRAM_COMPILE): Don't set.
+	(CLEAN_FILES): Add 'resgen.exe'.
+
 2005-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* monoresgen.cs: s/monoresgen/resgen/. Open the destination file with
